@@ -21,6 +21,7 @@ Updated translations:
 - Norwegian (bokmål) [Kjartan Maraas]
 - Romanian [Spoiala Cristian]
 - Serbian [Danilo Šegan]
+- Spanish [Francisco Javier F. Serrador]
 - Swedish [Christian Rose]
 
 0.8.2
